--- a/modules/tmgmt/sources/locale/tmgmt_locale.info.yml
+++ b/modules/tmgmt/sources/locale/tmgmt_locale.info.yml
@@ -1,7 +1,7 @@
 name: 'Locales Source'
 description: 'Locales source plugin for the Translation Management system.'
 package: 'Translation Management'
-# core: 8.x
+core: 8.x
 type: module
 dependencies:
  - tmgmt
